--- a/src/components/ui/cover/SeriesCover.astro
+++ b/src/components/ui/cover/SeriesCover.astro
@@ -47,6 +47,49 @@ const descriptionHtml = getSanitizeHtml(rawHtml);
     {
       series.links && (
         <div class="mt-6 flex flex-wrap items-center justify-center gap-3">
+          {series.links.pixiv && (
+            <a
+              href={series.links.pixiv}
+              target="_blank"
+              class="flex items-center gap-2 rounded-full bg-white/10 px-4 py-2 text-sm backdrop-blur-sm transition-all
+          hover:scale-105 hover:bg-white/20"
+            >
+              <Icon name="simple-icons:pixiv" class="h-5 w-5" />
+              <span>Pixiv</span>
+            </a>
+          )}
+          {series.links.fanbox && (
+            <a
+              href={series.links.fanbox}
+              target="_blank"
+              class="flex items-center gap-2 rounded-full bg-white/10 px-4 py-2 text-sm backdrop-blur-sm transition-all
+          hover:scale-105 hover:bg-white/20"
+            >
+              <img src="img/icon/fanbox.png" width="20" height="20"></img>
+              <span>Fanbox</span>
+            </a>
+          )}
+          {series.links.patreon && (
+            <a
+              href={series.links.patreon}
+              target="_blank"
+              class="flex items-center gap-2 rounded-full bg-white/10 px-4 py-2 text-sm backdrop-blur-sm transition-all hover:scale-105 hover:bg-white/20"
+            >
+              <Icon name="simple-icons:patreon" class="h-4 w-4" />
+              <span>Patreon</span>
+            </a>
+          )}
+          {series.links.southplus && (
+            <a
+              href={series.links.southplus}
+              target="_blank"
+              class="flex items-center gap-2 rounded-full bg-white/10 px-4 py-2 text-sm backdrop-blur-sm transition-all
+          hover:scale-105 hover:bg-white/20"
+            >
+              <img src="img/icon/southplus.ico" width="20" height="20" style="border-radius: 5px;"></img>
+              <span>Southplus</span>
+            </a>
+          )}
           {series.links.github && (
             <a
               href={series.links.github}
