--- a/src/layouts/AboutLayout.astro
+++ b/src/layouts/AboutLayout.astro
@@ -1,4 +1,5 @@
 ---
+import CustomContentWrapper from '@components/common/CustomContentWrapper.astro';
 import HomeSider from '@components/layout/HomeSider.astro';
 import Cover from '@components/ui/cover/Cover.astro';
 import { CONTENT_PADDING } from '@constants/layout';
@@ -22,9 +23,11 @@ const { frontmatter } = Astro.props;
     <Cover slot="cover" title="关于我" />
     <HomeSider slot="sider" />
     <div class={`shadow-box bg-gradient-start mx-0 flex w-full flex-col gap-8 ${CONTENT_PADDING.standard}`}>
-      <div class=`prose md:prose-sm dark:prose-invert`>
-        <slot />
-      </div>
+      <CustomContentWrapper>
+        <div class="prose md:prose-sm dark:prose-invert">
+          <slot />
+        </div>
+      </CustomContentWrapper>
       <Comment />
     </div>
   </TwoColumnLayout>
