--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -5,7 +5,7 @@ import { CONTENT_PADDING } from '@constants/layout';
 import { siteConfig } from '@constants/site-config';
 import Layout from '@layouts/Layout.astro';
 import TwoColumnLayout from '@layouts/TwoColumnLayout.astro';
-import { getPostLastCategory, getSortedPosts, normalizeTag, tagToSlug } from '@lib/content';
+import { getPostLastCategory, getSortedPosts, normalizeTag } from '@lib/content';
 import { formatInTimeZone } from 'date-fns-tz';
 
 export async function getStaticPaths() {
